src/test/deca/syntax/invalid/class/class_sans_accolade.deca
/*
	Description: decl class sans l'accolade de fermeture

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b
{
	int y;
